--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<nav>
 				<ul>
 					<li><a href="#" class="active">მთავარი</a></li>
-					<li><a href="სიახლეები.html">სიახლეები</a></li>
+					<li><a href="index2.html">სიახლეები</a></li>
 					<li><a href="#">კონტაქტი</a></li>
 				</ul>	
 			</nav> 
@@ -25,7 +25,6 @@
 			<li class="folist"><a href="https://www.youtube.com" target="blank"><img class="fologo" src="images/youtube.svg"></a></li>
 		</ul>
 	</footer>	
-
 
 	</body>
 </html>
