--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 			<img  class="logo" src="images/logo.svg">
 			<nav>
 				<ul>
-					<li><a href="მთავარი.html" >მთავარი</a></li>
+					<li><a href="index.html">მთავარი</a></li>
 					<li><a class="active" href="#">სიახლეები</a></li>
 					<li><a href="#">კონტაქტი</a></li>
 				</ul>	
@@ -101,5 +101,6 @@
 		</ul>
 	</footer>	
 
+	
 	</body>
 </html>
